--- a/PoliceDispatchSystem/PoliceDispatchSystem.csproj
+++ b/PoliceDispatchSystem/PoliceDispatchSystem.csproj
@@ -7,16 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Graphviz4Net" Version="3.0.2" />
     <PackageReference Include="microsoft.entityframeworkcore.design" Version="9.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BLL\BLL.csproj" />
     <ProjectReference Include="..\DTO\DTO.csproj" />
+    <ProjectReference Include="..\IBL\IBL.csproj" />
   </ItemGroup>
 
 </Project>
