--- a/PoliceDispatchSystem/appsettings.json
+++ b/PoliceDispatchSystem/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OnewaySettings": {
+    "ReverseDirectionPenalty": 3.0,
+    "AllowReverseDirection": true,
+    "VerboseOnewayLogging": false
+  },
+  "GraphSettings": {
+    "MaxSegmentLength": 30.0
+  }
 }
